Prevent overflowing bottom bar

--- a/manager/static/infoskarm/style.css
+++ b/manager/static/infoskarm/style.css
@@ -117,5 +117,5 @@ iframe#proxy {
 	position: absolute;
 	height: 100%;
 	width: 100%;
+	z-index: -1;
 }
-
